--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
           - linux-s390x
           - linux-s390x-musl
           - macos-arm64
-          - macos-x64
+          # - macos-x64
           - windows-x64
 
         include:
