--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,10 +179,10 @@ jobs:
             os: macos-14
             architecture: "arm64"
 
-          - id: macos-x64
-            target: x86_64-apple-darwin
-            os: macos-13
-            architecture: "x86_64"
+          # - id: macos-x64
+          #   target: x86_64-apple-darwin
+          #   os: macos-13
+          #   architecture: "x86_64"
 
           #
           # Windows
